# drone_project

robot_gazebo/: CMakeLists.txt  README.md  package.xml
robot_gazebo/config/: drone_sim_config.yaml  geometry_drone_config.yaml  gz_ros2_bridge.yaml
robot_gazebo/launch/: drone_gazebo.launch.py  spawn_ignition.launch.py
robot_gazebo/model/: brushless_rotor.urdf.xacro  inertial_macros.xacro  robot_drone_gazebo.urdf.xacro  robot_drone_geometry.urdf.xacro  robot_drone_sim_description.urdf.xacro  robot_sensing_macros.xacro
simulation_gz/: CMakeLists.txt  package.xml
simulation_gz/launch/: simulation_gz.launch.py
simulation_gz/models/X3/: model.sdf
simulation_gz/worlds/maze/: model.sdf
simulation_gz/worlds/new_world/: exploration.sdf  generated_world.sdf  new_world.sdf
